# v6-tools-general

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: publish_python_package.yml  pyproject.toml  test-suite.yml
src/vantage6_strongaya_general/: __init__.py  general_statistics.py  miscellaneous.py  privacy_measures.py
src/vantage6_strongaya_general.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: TESTING_GUIDE.md  conftest.py
tests/empirical/: __init__.py  test_federated_vs_centralised.py
tests/integration/: test_federated_vs_central.py  test_federated_vs_centralised.py  test_miscellaneous_integration.py  test_stratification.py
tests/test_data/: edge_case_extreme_outliers.csv  edge_case_identical_values.csv  edge_case_mixed_types.csv  edge_case_mostly_missing.csv  edge_case_rare_categories.csv  edge_case_single_point.csv  edge_case_tiny_sample.csv  federated_org_1.csv  federated_org_2.csv  federated_org_3.csv  federated_org_4.csv  patient_data.csv  quality_of_life_data.csv  quantile_known_quantiles.csv  quantile_normal_dist.csv  quantile_skewed_dist.csv  quantile_uniform_dist.csv  quantile_with_ties.csv  synthetic_data_generator.py
tests/unit/: test_general_statistics.py  test_miscellaneous.py  test_privacy_measures.py
tests/utils/: test_helpers.py
