[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vantage6-strongaya-general"
version = "1.0.1"
description = "A small library with various general tools for Vantage6 algorithms developed for the STRONG AYA Project."
authors = [
    {name = "Joshi Hogenboom (@Jhogenboom)", email = "joshi.hogenboom@maastrichtuniversity.nl"},
    {name = "Varsha Gouthamchand (@VarshaGouthamchand)", email = "varsha.gouthamchand@maastro.nl"},
    {name = "Aiara Lobo Gomes (@aiaragomes)", email = "aiara.lobogomes@maastro.nl"}
]
maintainers = [
    {name = "Joshi Hogenboom (@Jhogenboom)", email = "joshi.hogenboom@maastrichtuniversity.nl"}
]
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=2.1.2",
    "pandas>=2.2.3",
    "vantage6-algorithm-tools>=3.6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.75.0",
    "faker>=18.0.0",
    "psutil>=5.9.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "hypothesis>=6.75.0",
    "faker>=18.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://github.com/STRONGAYA/v6-tools-general"
"Bug Tracker" = "https://github.com/STRONGAYA/v6-tools-general/issues"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["vantage6_strongaya_general"]